--- a/app/scss/util/breakpoints.scss
+++ b/app/scss/util/breakpoints.scss
@@ -19,7 +19,7 @@ $breakpoints-down: (
 }
 
 @mixin breakpoint-down($size){
-    @media(max-width: map-get($breakpoint, $size)){
+    @media(max-width: map-get($breakpoints-down, $size)){
         @content;
     }
 }
