--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,9 +1,17 @@
 @use '../util' as *;
 
 .header {
-    @include breakpoint('large') {
+    margin-top: rem(36);
+    @include breakpoint(medium) {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+    }
+
+    &__subtitle {
+        font-size: rem(14);
+        font-weight: 700;
+        color: var(--dark-text1);
     }
 
     &__title {
