--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -2,27 +2,62 @@
 
 .toggle {
     border: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: rem(12);
+
+    label {
+        &[for="dark"] {
+            grid-column: 1 / 2;
+            justify-self: end; // could have used text-align: right;
+        }
+        &[for="system"] {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+            justify-self: center;
+        }
+        &[for="light"] {
+            grid-column: 3 / 4;
+        }
+    }
 
     &__wrapper{
-
+        position: relative;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        height: rem(24); 
     }
 
     input[type="radio"]{
-
+        opacity: 0;
+        margin: 0;
     }
 
     &__background {
-
+        display: block;
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        top: 0;
+        border-radius: rem(12);
+        background: linear-gradient(225deg, var(--toggle-bg-end) 0%, var(--toggle-bg-start) 98.02%);
+        pointer-events: none;
     }
 
     &__button {
-        width: rem(16);
-        height: rem(16);
+        position: absolute;
+        left: rem(3);
+        top: rem(3);
+        right: 100%;
+        width: rem(18);
+        height: rem(18);
         border-radius: 50%;
-        background-color: var(--toggle);
+        background-color: var(--dark-bg);
+
+        ~ #light:checked {
+            right: 0;
+            left: 100%;
+        }
     }
 
-    label {
-        
-    }
 }
