--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -5,6 +5,14 @@ h1, h2, h3 {
     line-height: 1.1;
 }
 
+h1 {
+    font-size: rem(24);
+    margin-bottom: rem(3);
+    @include breakpoint(large) {
+        font-size: rem(28);
+    }
+}
+
 a, a:visited, a:active {
     text-decoration: none;
 }
