--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -1,14 +1,27 @@
 @use '../util' as *;
 
+.cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: rem(30);
+     @include breakpoint(medium) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include breakpoint(large) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 .card {
     background: var(--dark-card);
     color: var(--dark-text1);
-    width: rem(255);
     text-align: center;
     padding: rem(25);
+    border-radius: rem(5);
+
     // this modifier is for the card components top border
     &--facebook {
-
+        border-top: rem(5) solid var(--facebook);
     }
         
     &--twitter {
@@ -55,8 +68,16 @@
         font-weight: 700;
     }
 
+    &__followers {
+        margin-bottom: rem(25);
+    }
+
     &__count {
         color: var(--light-bg);
+        font-weight: 700;
+        letter-spacing: rem(-2);
+        line-height: 1;
+        margin-bottom: rem(4);
 
         &--big {
             font-size: rem(56);
@@ -68,17 +89,34 @@
     }
 
     &__label {
-
+        font-size: rem(12);
+        letter-spacing: rem(5);
+        font-weight: 400;
+        color: var(--dark-text1);
+        text-transform: uppercase;
     }
 
     &__change {
+        font-size: rem(12);
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         
         &--up {
-
+            color: var(--limegreen);
         }
 
         &--down {
-
+            color: var(--brightred);
         }
+
+        img {
+            margin-right: rem(4);
+        }
+    }
+
+    &__number {
+      
     }
 }
