--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -18,6 +18,8 @@
     text-align: center;
     padding: rem(25);
     border-radius: rem(5);
+    position: relative;
+    overflow: hidden;
 
     // this modifier is for the card components top border
     &--facebook {
@@ -25,22 +27,35 @@
     }
         
     &--twitter {
-
+        border-top: rem(5) solid var(--twitter);
     }
         
     &--instagram {
-
+        padding-top: rem(30);;
+        &::before {
+            content: '';
+            height: rem(5);
+            width: 100%;
+            position: absolute;
+            display: block;
+            left: 0;
+            top: 0;
+            background: linear-gradient(225deg, var(--instagram-end) 0%, var(--instagram-middle) 50.91%, var(--instagram-start) 100%); //var(--instagram-start);
+        }
+       // border-top: rem(5) solid var(--instagram-start);
     }
 
     &--youtube {
-
+        border-top: rem(5) solid var(--youtube);
     }
 
     &__platform {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: rem(5);
         margin-bottom: rem(28);
+        height: rem(20);
     }
     
     &__icon {
