--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -1,34 +1,23 @@
 @use '../util' as *;
 
 .toggle {
-    border: none;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: rem(4.8) rem(8);
+    grid-template-columns: 1fr 3rem;
+    border: none;
     margin: 0;
 
     label {
         font-size: rem(14);
+
         &[for="dark"] {
-            grid-column: 1 / 2;
-            justify-self: end; // could have used text-align: right;
-        }
-        &[for="system"] {
-            grid-column: 1 / 4;
-            grid-row: 2 / 3;
-            justify-self: center;
-            align-self: start;
-        }
-        &[for="light"] {
-            grid-column: 3 / 4;
+            line-height: rem(24);
+            margin-right: rem(13);
         }
     }
 
     &__wrapper{
         position: relative;
         grid-column: 2 / 3;
-        grid-row: 1 / 2;
         height: rem(24); 
     }
 
