--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -8,6 +8,8 @@
 
     label {
         font-size: rem(14);
+        font-weight: 700;
+        color: var(--toggle);
 
         &[for="dark"] {
             line-height: rem(24);
@@ -26,6 +28,7 @@
         margin: 0 rem(-2) 0 rem(-2);
         width: rem(24);
         height: rem(24);
+        
 
     }
 
@@ -36,7 +39,7 @@
         width: 100%;
         top: 0;
         border-radius: rem(12);
-        background: linear-gradient(225deg, var(--toggle-bg-end) 0%, var(--toggle-bg-start) 98.02%);
+        background: var(--toggle-bg);
         pointer-events: none;
     }
 
@@ -48,7 +51,7 @@
         width: rem(18);
         height: rem(18);
         border-radius: 50%;
-        background-color: var(--dark-bg);
+        background-color: var(--toggle-button);
         transition: all 150ms ease-in-out;
     }
     
