--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -12,7 +12,7 @@ body {
     padding: 0;
     font-family: var(--font-inter);
     background-color: var(--background);
-    color: var(--dark-text2);
+    color: var(--text-color);
     min-height: 150vh;
 }
 
